<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="@dimen/activity_margin"
        android:paddingBottom="@dimen/activity_margin"
        android:paddingStart="@dimen/activity_margin"
        android:paddingEnd="@dimen/activity_margin">

        <TextView
            android:id="@+id/reservedKeysDialogTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reserved_keys_dialog_title"
            android:textAppearance="?attr/textAppearanceHeadline6"
            android:paddingBottom="@dimen/medium_margin" />

        <TextView
            android:id="@+id/textDefaultReservedKeysLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/default_reserved_keys_label"
            android:textAppearance="?attr/textAppearanceSubtitle1"
            android:paddingBottom="@dimen/small_margin" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chipDefaultReservedKeys"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:chipSpacing="@dimen/small_margin"
            app:singleLine="false" />

        <org.fossify.commons.views.MyTextInputLayout
            android:id="@+id/reservedKeyInputHint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_margin"
            android:hint="@string/new_reserved_key_hint">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/reservedKeyInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:textCursorDrawable="@null"
                android:maxLines="1" />
        </org.fossify.commons.views.MyTextInputLayout>

        <Button
            android:id="@+id/btnAddReservedKey"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_margin"
            android:text="@string/add_reserved_key" />

        <TextView
            android:id="@+id/textCustomReservedKeysLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_margin"
            android:text="@string/custom_reserved_keys_label"
            android:textAppearance="?attr/textAppearanceSubtitle1" />

        <TextView
            android:id="@+id/textCustomReservedKeysEmpty"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/custom_reserved_keys_empty"
            android:visibility="gone"
            android:textAppearance="?attr/textAppearanceBody2"
            android:paddingTop="@dimen/small_margin" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chipCustomReservedKeys"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:chipSpacing="@dimen/small_margin"
            app:singleLine="false"
            android:paddingTop="@dimen/small_margin" />
    </LinearLayout>
</ScrollView>
